# spckitmookup

./: .dockerignore  .env.example  .gcloudignore  .gitattributes  .gitignore  Dockerfile  README.md  byte_scan.py  check_git.bat  check_models.py  cloudbuild.yaml  commit_msg.txt  debug_node.bat  debug_quick.py  debug_read.py  debug_schema.py  docker-compose.yml  extract_schemas.py  extract_tables.py  extract_tables_robust.py  extract_tables_to_file.py  extract_tables_v2.py  find_schemas.py  find_table_lines.py  find_tables.py  find_tables_stream.py  gcp.md  locate_tables.py  locate_tables_file.py  locate_tables_v3.py  map_sql_chunked.py  map_sql_file.py  map_sql_v2.py  metadata.json  package-lock.json  package.json  read_schema.py  requirements.txt  run_debug_path.bat  run_dev.bat  (+14 more)
.Rules/: projectrules.md
assets/: README.md
backend/: ONBOARDING.md  README.md  demo_pc_diagnosis.py  extract_schema_script.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  main.py
backend/data/: README.md
backend/data/compatibility/: README.md
backend/data/pc_diagnosis/: README.md
backend/data/price_prediction/: README.md
backend/data/recommendation/: README.md  build_graph.py  game_requirements.json  popular_builds.json  synergy_edges.json
backend/modules/: README.md  SERVICE_ARCHITECTURE.md  __init__.py
backend/modules/compatibility/: README.md  __init__.py  engine.py  ontology.py  rules.py
backend/modules/danawa/: __init__.py  danawa_service.py
backend/modules/genai/: image_generator.py
backend/modules/multi_agent/: README.md  __init__.py  agents.py  orchestrator.py  tools.py
backend/modules/pc_diagnosis/: README.md  __init__.py  analyzers.py  collectors.py  engine.py
backend/modules/pc_diagnosis/data/: benchmark_scores.json  budget_builds.json
backend/modules/price_prediction/: README.md  _init_.py  data_collector.py  features.py  predictor.py
backend/modules/recommendation/: README.md  __init__.py  engine.py  graph_builder.py  model_weights.pt  models.py  train.py  verify_recommend.py
backend/prompts/: README.md  index.js  system-instruction.js  user-prompt-template.js
backend/rag/: __init__.py  config.py  data_parser.py  embedder.py  generator.py  pipeline.py  ragREADME.md  retriever.py  step_by_step.py  vector_store.py
backend/scripts/: README.md  __init__.py  check_sql.py  debug_sql_parse.py  download_data.py  init_database.py  setup_dev.py  setup_modules.py  test_rag.py
backend/tests/: __init__.py  analyze_metadata.py  conftest.py  demo_multi_agent_pipeline.py  initialize_db.py  test_compatibility.py  test_debug.py  test_multi_agent.py  test_pc_diagnosis.py  test_pc_diagnosis_data.py  test_price_prediction.py  test_rag_force_generation.py  test_recommendation.py  test_step_by_step_real.py  verify_db_content.py  verify_feedback.py  verify_rag_scenario.py  verify_strict_order.py
docs/: .gitignore.md  AUTOMATION_AND_DOMAIN.md  CHANGELOG.md  CLEANUP_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  FIREBASE_SETUP.md  INDEX.md  MIGRATION_SUMMARY.md  PROJECT_STRUCTURE.md  QUICK_START.md  RAG_GUIDE.md  SUMMARY.md  TROUBLESHOOTING.md  VERCEL_DEPLOYMENT.md  device-insights-research.md
frontend/: ICON_MIGRATION_SUMMARY.md  README.md  REQUIRED_FILES.md  builder.css  builder.html  index.html  landing.css
frontend/js/: api.js  auth.js  builder.js  community.js  firebase-config.js  landing.js  prompts.js
research/snippets/: probeLight.js
scripts/: build.js  start_cloud_run.sh
